style : removed bootstrap class

--- a/app.css
+++ b/app.css
@@ -1,13 +1,12 @@
 * {
   box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+  font-family: sans-serif;
 }
 .app {
   background-color: beige;
   min-height: 100vh;
-}
-.heading {
-  padding-left: 50px;
-  margin-bottom: 0%;
 }
 #applicationForm input,
 #applicationForm select {
@@ -21,29 +20,66 @@
 }
 .main {
   display: flex;
-  padding: 5px;
+  padding: 15px;
+  gap: 5px;
 }
 .left {
-  background-color: white;
   flex: 0 0 20%;
-  min-height: 85vh;
-  padding-bottom: 5px;
 }
 .right {
-  background-color: white;
   flex: 0 0 80%;
+}
+.left,
+.right {
+  background-color: white;
   min-height: 85vh;
+  border-radius: 7px;
+  padding: 15px;
+}
+.header {
+  padding-left: 15px;
+  font-size: xx-large;
+}
+#statusCounts {
+  text-align: center;
 }
 form {
+  margin-top: 5px;
+  gap: 5px;
   display: flex;
   flex-direction: column;
 }
 form input,
-form select,
-form textarea {
-  margin-bottom: 2px;
-  font-weight: bold;
+form select {
+  height: 32px;
+  line-height: 32px;
+  border-radius: 8px;
+  border: 1px solid black;
 }
+.validation-error {
+  color: red;
+  line-height: 1;
+  font-size: small;
+  display: none;
+}
+#jobType,
+#status {
+  line-height: 18px;
+}
+/*Button CSS */
+#submitBtn {
+  height: 28px;
+  background-color: blue;
+  color: white;
+  border: 1px solid blue;
+  border-radius: 8px;
+}
+#submitBtn:hover {
+  background-color: rgb(53, 53, 253);
+  cursor: pointer;
+}
+
+/* table css */
 table {
   width: 100%;
 }
@@ -51,9 +87,15 @@ table,
 th,
 td {
   border: 1px solid #ddd;
-  padding: 3px;
+  padding: 8px;
   text-align: left;
 }
+.table-main {
+  width: 100%;
+  overflow-x: auto;
+}
+
+/* status css */
 .status-applied {
   background-color: #f0f8ff;
 }
@@ -73,8 +115,8 @@ button.delete {
 #searchInput:not(:placeholder-shown) + #clearBtn {
   display: block;
 }
-/* media queies */
 
+/* media queies */
 @media screen and (max-width: 600px) {
   .main {
     flex-direction: column;
@@ -82,5 +124,8 @@ button.delete {
   .left,
   .right {
     flex: 0 0 100%;
+  }
+  .header {
+    font-size: x-large;
   }
 }
