--- a/app.css
+++ b/app.css
@@ -13,11 +13,7 @@
   box-shadow: none;
   padding: 5px;
 }
-#searchInput {
-  box-shadow: none;
-  padding: 2px;
-  padding-left: 10px;
-}
+
 .main {
   display: flex;
   padding: 15px;
@@ -34,7 +30,7 @@
   background-color: white;
   min-height: 85vh;
   border-radius: 7px;
-  padding: 15px;
+  padding: 7px;
 }
 .header {
   padding-left: 15px;
@@ -43,11 +39,14 @@
 #statusCounts {
   text-align: center;
 }
-form {
+#applicationForm {
   margin-top: 5px;
   gap: 5px;
   display: flex;
   flex-direction: column;
+  border: 1px solid beige;
+  border-radius: 8px;
+  padding: 3px;
 }
 form input,
 form select {
@@ -55,6 +54,7 @@ form select {
   line-height: 32px;
   border-radius: 8px;
   border: 1px solid black;
+  font-size: medium;
 }
 .validation-error {
   color: red;
@@ -73,26 +73,92 @@ form select {
   color: white;
   border: 1px solid blue;
   border-radius: 8px;
+  font-size: 16px;
 }
 #submitBtn:hover {
   background-color: rgb(53, 53, 253);
   cursor: pointer;
 }
 
-/* table css */
-table {
-  width: 100%;
+.table-heading {
+  font-size: x-large;
+  text-align: center;
 }
-table,
-th,
+
+/* table css */
+.searchBox {
+  position: relative;
+  width: 300px;
+  margin-top: 4px;
+}
+#searchInput {
+  box-shadow: none;
+  padding: 2px;
+  padding-left: 10px;
+  border: 1px solid;
+  width: 300px;
+  border-radius: 8px;
+  height: 30px;
+}
+
+#searchInput:not(:placeholder-shown) + #clearBtn {
+  display: block;
+}
+#clearBtn {
+  position: absolute;
+  right: 10px;
+  top: 7px;
+  cursor: pointer;
+  color: red;
+}
+table {
+  margin-top: 10px;
+  width: 100%;
+  border: 2px solid beige;
+}
 td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  border: none;
+  padding: 3px;
   text-align: left;
 }
 .table-main {
   width: 100%;
   overflow-x: auto;
+}
+th {
+  border-bottom: 2px solid beige;
+  padding: 8px;
+}
+table {
+  border-collapse: collapse;
+}
+button.edit,
+button.delete {
+  margin-right: 5px;
+}
+#clearBtn {
+  display: none;
+}
+/*edit delete btn */
+.delete,
+.edit {
+  border: none;
+  border-radius: 8px;
+  width: 70px;
+  height: 23px;
+  cursor: pointer;
+  font-size: 14px;
+  box-shadow: 0 2px 2px bisque;
+}
+.edit {
+  background-color: yellow;
+}
+.delete {
+  background-color: red;
+}
+.noApplication {
+  text-align: center;
+  padding: 50px;
 }
 
 /* status css */
@@ -104,16 +170,6 @@ td {
 }
 .status-rejected {
   background-color: #c8e6c9;
-}
-button.edit,
-button.delete {
-  margin-right: 5px;
-}
-#clearBtn {
-  display: none;
-}
-#searchInput:not(:placeholder-shown) + #clearBtn {
-  display: block;
 }
 
 /* media queies */
@@ -127,5 +183,9 @@ button.delete {
   }
   .header {
     font-size: x-large;
+  }
+  .actionBox {
+    display: flex;
+    flex-direction: row;
   }
 }
